--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=demo-professional-docx-pdf-report-poi-tl
+spring.application.name=demo-poi-tl
+
+# portrait as text blocks
+#m2x.demo.export.template=classpath:/templates/template.docx
+# landscape as table
+m2x.demo.export.template=classpath:/templates/template_table.docx
+
+m2x.demo.export.readonly=false
