abstraction pdf convert

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,8 @@ spring.application.name=demo-poi-tl
 # landscape as table
 m2x.demo.export.template=classpath:/templates/template_table.docx
 
-m2x.demo.export.readonly=false
+# to enable PDF conversion by OneDrive Graph API, set the following properties
+#m2x.demo.export.pdf-conversion.pdf-conversion=graph-api
+#m2x.demo.export.pdf-conversion.graph-api.tenant=
+#m2x.demo.export.pdf-conversion.graph-api.client-id=
+#m2x.demo.export.pdf-conversion.graph-api.client-secret=
