--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,15 @@
 spring.application.name=demo-poi-tl
 
+logging.level.rocks.m2x=DEBUG
+
 # portrait as text blocks
 #m2x.demo.export.template=classpath:/templates/template.docx
 # landscape as table
 m2x.demo.export.template=classpath:/templates/template_table.docx
+
+# to enable PDF conversion by OneDrive Graph API, set the following properties
+#m2x.demo.export.pdf-conversion.pdf-conversion=graph-api
+#m2x.demo.export.pdf-conversion.graph-api.tenant-id=
+#m2x.demo.export.pdf-conversion.graph-api.client-id=
+#m2x.demo.export.pdf-conversion.graph-api.client-secret=
+#m2x.demo.export.pdf-conversion.graph-api.user-principal-name-or-id=
